[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Assets/Sprites/Enemies/attackEffects/PNGs/Nautolan - Ray.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Projectiles/BossShoot/BossShoot.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 18, 38 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 38 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 18, 38 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 18, 38 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 19, 3 )

[node name="BossShoot" type="Area2D"]
scale = Vector2( 5, 2 )
collision_layer = 32
collision_mask = 11
script = ExtResource( 2 )

[node name="Ray" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
rotation = 1.5708
frames = SubResource( 5 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -19.1, -1 )
shape = SubResource( 6 )

[node name="TimerRayDuracity" type="Timer" parent="."]

[node name="PlayerMarker" type="Position2D" parent="."]
position = Vector2( -59.4, 1 )

[connection signal="area_entered" from="." to="." method="_on_BossShoot_area_entered"]
[connection signal="timeout" from="TimerRayDuracity" to="." method="_on_TimerRayDuracity_timeout"]
